<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Android Toolkit</string>
    <string name="TAG" translatable="false">TOOLKIT</string>
    <string name="drawer_item_1">Kernel</string>
    <string name="drawer_item_2">Android Magic</string>
    <string name="drawer_item_3">Partition Scheme</string>
    <string name="drawer_item_4">App Manager</string>
    <string name="drawer_item_5">Apk manager</string>
    <string name="drawer_item_6">Build Prop</string>
    <string name="drawer_item_7">About</string>
    <string name="boot_image">Boot Image</string>
    <string name="recovery_image">Recovery Image</string>
    <string name="boot_logo">Boot Logo</string>
    <string name="backp_dir_name">backups</string>
    <string name="apk_load_source" tools:ignore="TypographyEllipsis">Load apks from...</string>
    <string name="search">Search</string>
    <string name="toggle_all">toggle all</string>
    <string name="invert_selection">Invert selection</string>
    <string name="check_not_installed">Check not installed</string>
    <string name="check_old_apks">Check old apks</string>
    <string name="check_all_updatable">Check all Updatable</string>
    <string name="clear_screen">Clear screen</string>
    <string name="apk_name">Apk name</string>
    <string name="apk_path">apk Path</string>
    <string name="old_apk">old apk</string>
    <string name="not_installed">Not Installed</string>
    <string name="installing">Installing</string>
    <string name="property">Property :-</string>
    <string name="value">Value :-</string>
    <string name="confirm_changes">Are you sure you want to save the changes..?</string>
    <string name="what_is_a_kernel">What is a kernel ?</string>
    <string name="what_is_a_kernel_answer">A kernel is the essential center of a computer operating system, that acts as a connector between hardware and software of a computer. sometimes it is refered as heart of a system.</string>
    <string name="about_android_kernel">About android kernel</string>
    <string name="about_android_kernel_explained">Android is a mobile operating system, based on a modified version of the Linux kernel. every android device will have its own kernel which can never be used on other device without required modifications.</string>
    <string name="current_running_kernel">Current running kernel :</string>
    <string name="kernel_backup_directory">kernel backup directory :</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="install">Install</string>
    <string name="kernel_guideline">click on + button for actions</string>
    <string name="name">Name :</string>
    <string name="block_device">Block Device :</string>
    <string name="dev_block_mmcblkxpx">/dev/block/mmcblkxpx</string>
    <string name="type">Type :</string>
    <string name="ext4">ext4</string>
    <string name="block_size">Block Size :</string>
    <string name="start">Start :</string>
    <string name="end">End :</string>
    <string name="dynamic">Dynamic</string>
    <string name="unit_byte">unit Byte</string>
    <string name="unit_kb">unit KB</string>
    <string name="unit_mb">unit MB</string>
    <string name="unit_gb">unit GB</string>
    <string name="kern_backup_done">kernel backup completed.</string>
    <string name="finish">finish</string>
    <string name="power_off">Power off</string>
    <string name="reboot">Reboot</string>
    <string name="recovery">Recovery</string>
    <string name="bootloader">Bootloader</string>
    <string name="soft_reboot">Soft reboot</string>
    <string name="reastart_systemui">Reastart SystemUi</string>
    <string name="android_img_page_guide">click on + button for actions</string>
    <string name="project_unpack_directory">project unpack directory :</string>
    <string name="data_local_toolkit">/data/local/ToolKit</string>
    <string name="backups_directory">backups directory :</string>
    <string name="version">Version</string>
    <string name="version_code">Version code</string>
    <string name="colon">:</string>
    <string name="size">Size</string>
    <string name="package_name">Package name</string>
    <string name="file_name">File name</string>
    <string name="text">Text</string>
    <string name="apk_icon">apk icon</string>
    <string name="click_on_button_for_actions">Click on + button for actions.</string>
    <string name="sort_by">Sort by :</string>
    <string name="title">Title</string>
    <string name="settings_icon">settings icon</string>
    <string name="xda_official_thread">Xda official thread :</string>
    <string name="find_me_on">Find me on :</string>
    <string name="want_to_donate_me">want to donate me ?</string>
    <string name="paytm_qr_code">Paytm QR code</string>
    <string name="libraries_used">Libraries used :</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="filepicker_dialog">FilePicker Dialog</string>
    <string name="model">Model :</string>
    <string name="partition_table">Partition Table :</string>
    <string name="sector_size">Sector Size :</string>
    <string name="reboot_dialog">reboot dialog</string>
    <string name="show_confirmation_dialog">Show confirmation dialog</string>
    <string name="allow_soft_reboot">Allow soft reboot</string>
    <string name="kernel">kernel</string>
    <string name="allow_kernel_installation">Allow kernel installation</string>
    <string name="backups">backups</string>
    <string name="kernel_boot_recovery_and_logo">( kernel, boot, recovery and logo )</string>
    <string name="backups_location">backups location :</string>
    <string name="app_backup_directory">App backup directory</string>
    <string name="advanced">advanced</string>
    <string name="boot">Boot</string>
    <string name="boot_logo_">Boot logo</string>
    <string name="term_icon">term icon</string>
    <string name="settings">Settings</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="choose_button_label">Select</string>
    <string name="default_dir" translatable="false">/sdcard</string>
    <string name="label_parent_directory">Parent Directory</string>
    <string name="last_edit">Last edited: </string>
    <string name="error_dir_access">Directory cannot be accessed</string>
    <string name="label_parent_dir" translatable="false">...</string>
    <string name="select_storage">Select Storage</string>
    <string name="dialog_icon">dialog icon</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="android_magic">Android Magic</string>
    <string name="partition_scheme">Partition Scheme</string>
    <string name="app_manager">App Manager</string>
    <string name="apk_manager">Apk Manager</string>
    <string name="build_prop">Build Prop</string>
    <string name="about">About</string>
    <string name="application_icon">application Icon</string>
    <string name="root_utilities_in_one_place">Root utilities in one place</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete_property">Are you sure you want to delete this property..?</string>
    <string name="confirm_save_changes">Are you sure you want to save changes..?</string>
    <string name="save">Save</string>
    <string name="installed">Installed</string>
    <string name="current_installed_version">Current Installed Version</string>
    <string name="new_version">New Version</string>
    <string name="install_kernel_warn"><![CDATA[Do you want to install as kernel at your own <b>knowledge and risk</b>.??]]></string>
    <string name="kern_install_from_ing_warn"><![CDATA[If it is having valid <b>android magic</b>,<br> kernel will be extracted from the img file you selected, and then will be installed on your device. Do you want to continue ?]]></string>
    <string name="wrong_kernel">wrong kernel</string>
    <string name="is_extremely_harmful_and_it_will_definitely">is extremely harmful and it will definitely</string>
    <string name="hard_brick">hard brick</string>
    <string name="your_device">your device</string>
    <string name="you_have_selected">You have selected</string>
    <string name="install_always">Install Anyways</string>
    <string name="dont_install">Don\'t install</string>
    <string name="kernel_installation">Kernel Installation</string>
    <string name="install_file_manager">Please install a File Manager.</string>
    <string name="select_kernel_or_boot_img_file">Select kernel or boot.img file</string>
    <string name="select_desired_backup_to_restore">Select desired backup to restore</string>
</resources>
