<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/check_all_chbx"
        android:checkable="true"
        android:title="@string/toggle_all"
        app:actionViewClass="android.widget.CheckBox"
        app:showAsAction="always" />

    <item
        android:id="@+id/toggle_all_chbx"
        android:title="@string/invert_selection"/>

    <item
        android:id="@+id/check_not_installed"
        android:title="@string/check_not_installed"/>

    <item
        android:id="@+id/check_old"
        android:title="@string/check_old_apks"/>

    <item
        android:id="@+id/check_updatable"
        android:title="@string/check_all_updatable"/>

    <item
        android:id="@+id/clrscr"
        android:title="@string/clear_screen"/>

</menu>
