<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical" android:gravity="center">

    <ImageView android:layout_width="60sp" android:layout_height="60sp"
        app:srcCompat="@mipmap/ic_launcher_round" android:contentDescription="@string/application_icon"
        android:id="@+id/imageView" android:layout_marginTop="20dp"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:textStyle="bold" android:textSize="16sp" android:layout_marginTop="14sp"
        android:text="@string/app_name" android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal|center" android:textColor="?attr/colorOnBackground"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="14sp"
        android:text="@string/root_utilities_in_one_place" android:layout_marginStart="10sp" android:layout_marginEnd="10sp"
        android:id="@+id/textView" android:layout_gravity="center_horizontal" android:gravity="center_horizontal"
        android:layout_marginBottom="10dp" android:textColor="?attr/colorOnBackground" android:layout_marginTop="4sp"/>

</LinearLayout>