<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="?attr/selectableItemBackground"
    tools:showIn="@layout/apk_list_item">

    <ImageView
        android:layout_height="44dp"
        android:layout_width="44dp"
        android:layout_margin="10dp"
        android:id="@+id/apk_icon"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/ic_kernel"
        android:contentDescription="@string/apk_icon" />

    <CheckBox
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentEnd="true"
        android:id="@+id/apk_chbx"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="10dp"
        android:layout_centerVertical="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apk_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_toEndOf="@id/apk_icon"
        android:id="@+id/apk_name"
        android:layout_marginTop="8dp"
        android:layout_toStartOf="@id/apk_chbx"
        android:textColor="?attr/colorOnBackground"
        android:textStyle="bold"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apk_path"
        android:layout_below="@id/apk_name"
        android:layout_toEndOf="@id/apk_icon"
        android:layout_toStartOf="@id/apk_chbx"
        android:id="@+id/apk_path"
        android:layout_marginBottom="2dp"
        android:textSize="12sp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/old_apk"
        android:id="@+id/check_ver"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="4dp"
        android:layout_marginEnd="15dp"
        android:layout_below="@id/apk_path"
        android:gravity="bottom"
        android:textColor="#F99B4B"
        android:textSize="12sp"
        android:visibility="invisible"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/not_installed"
        android:id="@+id/stat_inst"
        android:layout_alignParentBottom="true"
        android:layout_margin="4dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/apk_path"
        android:gravity="bottom"
        android:textColor="@color/color_apk_not_installed"
        android:textSize="12sp"
        android:layout_toStartOf="@id/check_ver"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>

